FireAlarmApplication.Web/mtg_debug_20260127_151746.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 15:17:46
NetCDF: C:\Users\kubil\AppData\Local\Temp\30fbe602-a766-4067-a8ee-98a1b56f89f1.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
